<?xml version="1.0"?>
<package format="2">
  <name>py_viz_marker</name>
  <version>1.0.0</version>
  <description>rospy node with services for adding and removing arbitrary rviz markers.</description>

  <maintainer email="mathias.arbo@ntnu.no">Mathias Hauan Arbo</maintainer>
  <license>MIT</license>
  <url type="website">http://github.com/mahaarbo/py_viz_marker</url>
  <author email="mathias.arbo@ntnu.no">Mathias Hauan Arbo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
